add HomeScreen and DemoBox

--- a/src/__features__/src/i18n/locales/he.json
+++ b/src/__features__/src/i18n/locales/he.json
@@ -1,4 +1,12 @@
 {
-    "hello": "שלום עולם"
+  "home": {
+    "welcome": "ברוך הבא למסך הבית",
+    "subtitle": "כאן תוכל לראות הדגמות של קומפוננטות שונות שבנית.",
+    "buttonDemoTitle": "כפתור מעוצב",
+    "buttonDemoDescription": "כפתור פשוט עם סטייל מותאם אישית.",
+    "buttonText": "לחץ כאן",
+    "inputDemoTitle": "שדה טקסט",
+    "inputDemoDescription": "שדה טקסט עם מסגרת נעימה למראה.",
+    "inputPlaceholder": "📝 כאן אפשר להכניס טקסט..."
   }
-  
+}
