--- a/src/__features__/src/i18n/locales/en.json
+++ b/src/__features__/src/i18n/locales/en.json
@@ -1,4 +1,12 @@
 {
-    "hello": "Hello World"
+    "home": {
+      "welcome": "Welcome to the Home Screen",
+      "subtitle": "Here you can see demonstrations of various components you built.",
+      "buttonDemoTitle": "Styled Button",
+      "buttonDemoDescription": "A simple button with custom styling.",
+      "buttonText": "Click Me",
+      "inputDemoTitle": "Text Input",
+      "inputDemoDescription": "A text input field with a soft border.",
+      "inputPlaceholder": "📝 You can enter text here..."
+    }
 }
-  
